--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "better-sqlite3": "^11.9.1",
+    "chart.js": "^4.4.9",
     "gestor_empleados": "file:",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
